--- a/Proiect/Exemple/Example.Api/appsettings.json
+++ b/Proiect/Exemple/Example.Api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaaultConnection": "Server=DESKTOP-75SO21L\\SQLEXPRESS;Database=PSSC;Trusted_Connection=True;MultipleActiveResultSets=true;",
+    "ServiceBus": "Endpoint=sb://pssc-2022.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=WHzPZKGoqL8gGZTqg2YrNWoMWnmRkbXV/5RuiycDQng="
+  }
 }
+
