--- a/Proiect/Exemple/Example.Api/appsettings.json
+++ b/Proiect/Exemple/Example.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaaultConnection": "Server=DESKTOP-75SO21L\\SQLEXPRESS;Database=PSSC;Trusted_Connection=True;MultipleActiveResultSets=true;",
+    "DefaultConnection": "Server=DESKTOP-75SO21L\\SQLEXPRESS;Database=PSSC;Trusted_Connection=True;MultipleActiveResultSets=true;",
     "ServiceBus": "Endpoint=sb://pssc-2022.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=WHzPZKGoqL8gGZTqg2YrNWoMWnmRkbXV/5RuiycDQng="
   }
 }
