--- a/Proiect/Exemple/Example.Api/appsettings.json
+++ b/Proiect/Exemple/Example.Api/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-75SO21L\\SQLEXPRESS;Database=PSSC;Trusted_Connection=True;MultipleActiveResultSets=true;",
-    "ServiceBus": "Endpoint=sb://pssc-2022.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=WHzPZKGoqL8gGZTqg2YrNWoMWnmRkbXV/5RuiycDQng="
+    "ServiceBus": "Endpoint=sb://psscservicebus.servicebus.windows.net/;SharedAccessKeyName=manage-sub-key;SharedAccessKey=lxAg34IQ62xUdv2F063bstVALbywfcmLhsvyFlruQvM="
   }
 }
 
