--- a/Proiect/Exemple/Example.Api/appsettings.json
+++ b/Proiect/Exemple/Example.Api/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-75SO21L\\SQLEXPRESS;Database=PSSC;Trusted_Connection=True;MultipleActiveResultSets=true;",
-    "ServiceBus": "Endpoint=sb://psscservicebus.servicebus.windows.net/;SharedAccessKeyName=manage-sub-key;SharedAccessKey=lxAg34IQ62xUdv2F063bstVALbywfcmLhsvyFlruQvM="
+    "ServiceBus": "Endpoint=sb://produseservicebus.servicebus.windows.net/;SharedAccessKeyName=produseKey;SharedAccessKey=eV04Pc3RwmN+0zv8pJYN1GnowCO1u7We3gx1sNrEDb8="
   }
 }
 
